--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,15 @@
 version: '3'
 
 services:
+    app:
+        container_name: event-router
+        build:
+            context: .
+        ports:
+            - "3000:3000"
+        volumes:
+            - .:/go/src/bitbucket.org/strider2038/event-router
+
     zookeeper:
         container_name: zookeeper
         image: zookeeper:latest
@@ -38,5 +47,5 @@ services:
         ports:
             - "8001:8000"
         environment:
-            KAFKA_REST_PROXY_URL: "http://kafka:8082"
+            KAFKA_REST_PROXY_URL: "http://kafka_rest:8082"
             PROXY: "true"
