--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         ports:
             - "3000:3000"
         volumes:
-            - .:/go/src/bitbucket.org/strider2038/event-router
+            - .:/go/src/github.com/strider2038/message-router
 
     zookeeper:
         container_name: zookeeper
