--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,12 @@ version: '3'
 
 services:
     app:
-        container_name: event-router
+        container_name: message-router
         build:
             context: .
+        environment:
+            MESSAGE_ROUTER_KAFKA_BROKERS: "kafka:9092"
+            MESSAGE_ROUTER_PORT: 3000
         ports:
             - "3000:3000"
         volumes:
