docker build in ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,6 @@ before_script:
 
 script:
   - go test ./...
+  - docker build --pull --tag "strider2038/message-router" .
+  - docker login -u "$DOCKER_LOGIN" -p "$DOCKER_PASSWORD"
+  - docker push strider2038/message-router
